--- a/team/css/style.css
+++ b/team/css/style.css
@@ -116,6 +116,11 @@ img.middle-images{
     color: #FFF;
   }
 
+  .top-title{
+    max-width: 400px;
+    margin: auto;
+  }
+
   .top-titletext{
     width: 300px;
     color: var(--netral-white, #FFF);
@@ -130,6 +135,7 @@ img.middle-images{
   }
 
   .main-content{
+    margin: auto;
     display: flex;
     width: 376px;
     height: 800px;
@@ -140,7 +146,6 @@ img.middle-images{
     flex-shrink: 0;
     border-radius: 20px 20px 20px 20px;
     background: #D8E4E8;
-    margin: 10px 25px;
   }
 
 label{
